--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,14 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content class = "bg-image">
+  <ion-grid>
+    <ion-row>
+      <ion-col text-center>
+        <button ion-button (click)="openSignIn()" class="bigger_text" clear>Sign In</button>
+      </ion-col>
+    </ion-row>
+    <ion-row class="bottomRow">
+      <ion-col text-center>
+        <button ion-button (click)="openSignUp()" class="bigger_text" clear>Sign Up</button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
